tests/golden/type_errors/array_filter_callback_parameter_mismatch.cd
filter([1], fun (value: string): bool { return true; });
