tests/golden/type_errors/array_filter_callback_parameter_mismatch.err
Type error at 1:18: parameter `value` expects number, got string
  filter([1], fun (value: string): bool { return true; });
                   ^
